# SP_Y2S2M5

./: 207302027.txt  CMakeLists.txt  Test.cpp  check.txt
sources/: AscendingIterator.cpp  MagicalContainer.cpp  MagicalContainer.hpp  PrimeIterator.cpp  SideCrossIterator.cpp
